# LitMusic

./: README.md  build.gradle  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jefshe/litmusic/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioAnalyzer.cpp  AudioAnalyzer.h  AudioEngine.cpp  AudioEngine.h  Definitions.h  SoundRecording.cpp  SoundRecording.h  SoundRecordingUtilities.h  jni-bridge.cpp
app/src/main/java/com/jefshe/litmusic/: MainActivity.kt  SpectrumActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/jefshe/litmusic/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
